--- a/.github/workflows/clickhouse-udfs.yml
+++ b/.github/workflows/clickhouse-udfs.yml
@@ -1,6 +1,10 @@
 name: ClickHouse UDFs
 
 on:
+    # TODO just adding for testing, remove before merge
+    pull_request:
+        branches:
+            - master
     push:
         branches:
             - master
