--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -28,6 +28,11 @@ posthog/cdp/templates/** @PostHog/team-workflows
 .github/workflows/ci-security.yaml @PostHog/team-security
 .github/workflows/codeql.yml @PostHog/team-security
 
+# This workflow runs on the `pull_request_target` event so that it can run without needing a GitHub org member to explicitly approve it.
+# We must be careful to only execute code from this repo's default branch, and never execute code from the PR's branch.
+.github/workflows/auto-assign-reviewers.yml @PostHog/team-security
+.github/scripts/assign-reviewers.js @PostHog/team-security
+
 # And of course modifying this file can bring us problems so let's have the security team own it.
 # This does not affect CODEOWNERS-soft which is used for assigning non-required reviewers and it's much safer to change.
 CODEOWNERS @PostHog/team-security
