--- a/.github/workflows/mcp-publish.yml
+++ b/.github/workflows/mcp-publish.yml
@@ -68,7 +68,7 @@ jobs:
                   filter: blob:none
 
             - name: Set up Node 22
-              uses: actions/setup-node@v4
+              uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6.1.0
               with:
                   node-version: 22
                   registry-url: https://registry.npmjs.org
