--- a/common/hogli/manifest.yaml
+++ b/common/hogli/manifest.yaml
@@ -533,11 +533,19 @@ tools:
         hidden: true
     posthog:node:
         bin_script: posthog-node
-        description: 'TODO: add description for posthog-node'
+        description: Start the posthog-node service (old plugin-server)
         hidden: true
-    start:mcp:server:
-        bin_script: start-mcp-server
-        description: 'Start the MCP server'
+    posthog:hobby:
+        bin_script: posthog-hobby
+        description: Run the posthog-hobby installation script for Linux, don't use it on your MacOS development environment
+        hidden: true
+    posthog:hobby:darwin:
+        bin_script: posthog-hobby-darwin
+        description: Run the posthog-hobby installation script for MacOS
+        hidden: true
+    posthog:hobby:demo:
+        bin_script: posthog-hobby-demo
+        description: Run a demo check for the PostHog hobby installation, useful while developing the installation script
         hidden: true
 utilities:
     nuke:
