--- a/.dagster_home/dagster.yaml
+++ b/.dagster_home/dagster.yaml
@@ -12,3 +12,6 @@ concurrency:
               limit: 1
               value:
                   applyLimitPerUniqueValue: true
+            - key: 'dagster/concurrency_key'
+              value: 'web_analytics_cache_warming'
+              limit: 1
