--- a/.github/workflows/ci-nodejs-container.yml
+++ b/.github/workflows/ci-nodejs-container.yml
@@ -90,8 +90,8 @@ jobs:
               uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
               with:
                   images: |
-                      ghcr.io/posthog/posthog/node
-                      ${{ steps.aws-ecr.outputs.registry }}/node
+                      ghcr.io/posthog/posthog/posthog-node
+                      ${{ steps.aws-ecr.outputs.registry }}/posthog-node
                   tags: |
                       type=ref,event=pr
                       type=ref,event=branch
@@ -103,6 +103,7 @@ jobs:
               uses: depot/build-push-action@2583627a84956d07561420dcc1d0eb1f2af3fac0 # v1
               with:
                   buildx-fallback: false
+                  project: '00mrvlsdvh'
                   push: true
                   file: Dockerfile.node
                   tags: ${{ steps.meta.outputs.tags }}
