--- a/.github/workflows/ci-nodejs-container.yml
+++ b/.github/workflows/ci-nodejs-container.yml
@@ -116,7 +116,7 @@ jobs:
               run: |
                   echo "Image digest: ${{ steps.build.outputs.digest }}"
                   echo "Full image reference: ${{ github.sha }}@${{ steps.build.outputs.digest }}"
-                  echo "## Container Image Built :rocket:" >> $GITHUB_STEP_SUMMARY
+                  echo "## Container image built :rocket:" >> $GITHUB_STEP_SUMMARY
                   echo "" >> $GITHUB_STEP_SUMMARY
                   echo "**Image SHA:** \`${{ github.sha }}@${{ steps.build.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
                   echo "" >> $GITHUB_STEP_SUMMARY
