--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -96,7 +96,7 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Install and use a non-root user
-RUN groupadd -r posthog && useradd -r -g posthog posthog && \
+RUN groupadd -g 1000 posthog && useradd -u 1000 -g posthog posthog && \
     chown -R posthog:posthog /code
 USER posthog
 
