--- a/.github/workflows/ci-nodejs-container.yml
+++ b/.github/workflows/ci-nodejs-container.yml
@@ -142,6 +142,9 @@ jobs:
         permissions:
             contents: read
         steps:
+            - name: Check out
+              uses: actions/checkout@v4
+
             - name: Get deployer token
               id: deployer
               uses: getsentry/action-github-app-token@d4b5da6c5e37703f8c3b3e43abb5705b46e159cc # v3
