--- a/.github/workflows/ci-nodejs-container.yml
+++ b/.github/workflows/ci-nodejs-container.yml
@@ -23,6 +23,9 @@ jobs:
         outputs:
             node_files: ${{ steps.filter.outputs.node_files }}
         steps:
+            - name: Check out
+              uses: actions/checkout@v4
+
             - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
               id: filter
               with:
